--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Random Quote Machine © Ivan Herrera</title>
   </head>
   <body>
     <div id="root"></div>
